# simularium-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README  README.md  build.json  build.sh  et  format.sh  local_build.sh  makefile  setup_env.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/models/: linear_actin.json  test.json
dep/: CMakeLists.txt
dep/RakNet/DependentExtensions/Swig/SwigOutput/CplusDLLIncludes/: RakNet_wrap.cxx
dep/RakNet/DependentExtensions/Swig/SwigWindowsCSharpSample/SwigTestApp/: TestMain.cs
dep/RakNet/Source/: RakWString.cpp  ReplicaManager3.cpp
dep/RakNet/bin_headers/: CMakeCache.txt  Makefile  cmake_install.cmake
dep/RakNet/bin_headers/Lib/: Makefile  cmake_install.cmake
dep/RakNet/bin_headers/Lib/DLL/: Makefile  cmake_install.cmake
dep/cytosim/: CMakeLists.txt
dep/cytosim/extra/: cygwin.md
dep/cytosim/src/: CMakeLists.txt
dep/cytosim/src/math/: CMakeLists.txt
dep/cytosim/src/sim/spaces/: CMakeLists.txt  space_dynamic_ellipse.cc  space_dynamic_ellipse.h
dep/googletest/: Makefile  config.status
dep/googletest/googlemock/: Makefile  config.status  libtool
dep/googletest/googlemock/lib/: libgmock.la  libgmock_main.la
dep/googletest/googlemock/lib/.libs/: libgmock.lai  libgmock.so.0.0.0  libgmock_main.lai  libgmock_main.so.0.0.0
dep/googletest/googlemock/scripts/: gmock-config
dep/googletest/googlemock/src/: gmock-all.lo  gmock_main.lo
dep/googletest/googlemock/src/.deps/: gmock-all.Plo  gmock_main.Plo
dep/googletest/googletest/: Makefile  config.status  libtool
dep/googletest/googletest/lib/: libgtest.la  libgtest_main.la
dep/googletest/googletest/lib/.libs/: libgtest.lai  libgtest_main.lai  libgtest_main.so.0.0.0
dep/googletest/googletest/make/: sample1_unittest
dep/googletest/googletest/src/: gtest-all.lo  gtest_main.lo
dep/googletest/googletest/src/.deps/: gtest-all.Plo  gtest_main.Plo
dep/gtest/: CMakeLists.txt
dep/gtest/googletest/cmake/: internal_utils.cmake
dep/readdy/: CMakeLists.txt
dep/readdy/include/readdy/model/: Kernel.h
dep/readdy/include/readdy/model/observables/: Observables.h
dep/readdy/include/readdy/model/topologies/: GraphTopology.h  TopologyRegistry.h
dep/readdy/include/readdy/model/topologies/reactions/: StructuralTopologyReaction.h
dep/readdy/kernels/cpu/: CMakeLists.txt
dep/readdy/kernels/singlecpu/: CMakeLists.txt
dep/readdy/kernels/singlecpu/src/: SCPUKernel.cpp
dep/readdy/kernels/singlecpu/src/actions/: SCPUEvaluateTopologyReactions.cpp
dep/readdy/readdy/main/model/topologies/: GraphTopology.cpp
dep/readdy/wrappers/python/src/python/readdy/: _version.py
doc/: data_format.md  processed-trajectories.md  vis-data.md  visualization-data-format.md
ext/: import_dep_headers.sh  import_openmm.sh  import_readdy.sh
ext/hdf5/: H5pubconf.h  h5_gen.mod  h5a.mod  h5d.mod  h5ds.mod  h5e.mod  h5f.mod  h5g.mod  h5global.mod  h5i.mod  h5im.mod  h5l.mod  h5lib.mod  h5lt.mod  h5lt_const.mod  h5o.mod  h5p.mod  h5r.mod  h5s.mod  h5t.mod  h5tb.mod  h5tb_const.mod  h5z.mod  hdf5.mod  th5_misc_gen.mod  tstlite_tests.mod
ext/raknet/: ReplicaManager3.cpp
inc/agentsim/: agent_data.h  agentsim.h  readdy_models.h  simulation.h  simulation_cache.h  simulation_frame.h
inc/agentsim/agents/: agent.h
inc/agentsim/aws/: aws_util.h
inc/agentsim/common/: logger.h
inc/agentsim/fileio/: binary_cache_reader.h  binary_cache_writer.h  simularium_file_reader.h
inc/agentsim/interactions/: combination_reaction.h  reaction.h  reaction_bond_change.h  reaction_center.h  reaction_state_change.h  statechange_reaction.h  unimolecular_reaction.h
inc/agentsim/model/: model.h
inc/agentsim/network/: cli_client.h  connection_manager.h  net_message_ids.h  trajectory_properties.h
inc/agentsim/pattern/: agent_pattern.h
inc/agentsim/simpkg/: readdypkg.h  (+4 more)
inc/simularium/: agent_data.h  simularium.h  simulation.h  simulation_cache.h
inc/test/: dummy_trajectory_info.h  test_agentsim.h
inc/tests/: all_tests.h
lib/linux/: libblosc.so.1  libblosc.so.1.14.3  libhdf5.settings  libhdf5.so.101.1.0  libhdf5_cpp.so.102.0.0  libhdf5_fortran.so.100  libhdf5_fortran.so.100.1.1  libhdf5_hl.so.100.1.0  libhdf5_hl_cpp.so.100  libhdf5_hl_cpp.so.100.1.1  libhdf5hl_fortran.so.100  libhdf5hl_fortran.so.100.0.2
scripts/: parse_csv.pl  parse_multicellDS_xml.py  parse_readdy_h5.py  pyMCDS.py
src/: CMakeLists.txt  TestReaDDyFileIO.cpp  agentsim.cpp  agentsim_client.cpp  agentsim_server.cpp  agentsim_tests.cpp  agentsim_websockets_server.cpp  aws_test.cpp  main.cpp
src/agentsim/: CMakeLists.txt  agent.cpp  aws_util.cpp  cli_client.cpp  combination_reaction.cpp  connection_manager.cpp  cytosimpkg.cpp  jsoncpp.cpp  math_util.cpp  model.cpp  movement_simulator.cpp  openmm_simulator.cpp  reaction_simulator.cpp  readdypkg.cpp  readdypkg_fileio.cc  readdypkg_generalized.cc  readdypkg_hardcoded.cc  simpleinteraction.cpp  simplemove.cpp  simulation.cpp  simulation_cache.cpp  simulation_frame.cpp  statechange_reaction.cpp  unimolecular_reaction.cpp
src/agentsim/agents/: agent.cpp
src/agentsim/cmake/: cytosimpkg.cmake  readdypkg.cmake
src/agentsim/network/: cli_client.cpp
src/main/: CMakeLists.txt  agent.cpp  agent_data.cpp  aws_util.cpp  binary_cache_reader.cpp  binary_cache_writer.cpp  cli_client.cpp  config.cpp  connection_manager.cpp  cytosimpkg.cpp  logger.cpp  math_util.cpp  model.cpp  parse_traj_info.cc  parse_traj_info.cpp  readdy_kinesin.cc  readdy_microtubule.cc  readdypkg.cpp  readdypkg_fileio.cc  readdypkg_generalized.cc  readdypkg_hardcoded.cc  readdypkg_kinesin.cc  readdypkg_microtubule.cc  readdypkg_model_utils.cc  simularium_binary_file.cpp  simularium_file_reader.cpp  simulation.cpp  simulation_cache.cpp  tfp_to_json.cpp  trajectory_info_parser.cpp  trajectory_info_v1.cpp
src/main/cmake/: cytosimpkg.cmake  jsoncpp.cmake  logger.cmake  loguru.cmake  readdypkg.cmake
src/test/: CMakeLists.txt  mockpkg.cc  test_agent.cpp  test_aws_util.cpp  test_client_server.cpp  test_net_commands.cpp  test_sim_time.cpp  test_traj_info.cpp  test_trajectory_info_v1.cpp
(+54 files in other folders)
